<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/linear_layout_shape"
    android:orientation="vertical">


    <TextView
        style="@style/primary20Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/total_Score" />

    <TextView
        android:id="@+id/tvScore"
        style="@style/black20Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/ten" />

    <Button
        android:id="@+id/btnDismiss"
        style="@style/white16Regular"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/dismiss" />

</LinearLayout>