<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.word_puzzle.WordPuzzleDifficultyLevelFragment">

        <TextView
            android:id="@+id/tvAddWord"
            style="@style/primary16Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/add_words"
            app:drawableStartCompat="@drawable/ic_add_circle" />

        <TextView
            style="@style/primary25Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/choose_your_level" />

        <TextView
            android:id="@+id/tvWordLevelEasy"
            style="@style/white20Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/quiz_text_view_shape"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/Easy" />

        <TextView
            android:id="@+id/tvWordLevelMedium"
            style="@style/white20Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/quiz_text_view_shape"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/MEDIUM" />

        <TextView
            android:id="@+id/tvWordLevelHard"
            style="@style/white20Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/quiz_text_view_shape"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/HARD" />


    </LinearLayout>
</ScrollView>