<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.word_puzzle.PlayWordPuzzleFragment">

        <include
            layout="@layout/layout_common"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/h_guide_20"
            app:layout_constraintBottom_toBottomOf="@+id/h_guide_80"
            android:background="@drawable/linear_layout_shape"
            android:orientation="vertical">

            <TextView
                style="@style/primary30Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/your_word_is" />
            <TextView
                android:id="@+id/tvWordNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/word_number" />


            <TextView
                android:id="@+id/tvWordQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_10"
                android:hint="@string/your_answer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWordAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnNextWordButton"
                style="@style/white20Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/next" />

        </LinearLayout>

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>