<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quizData"
            type="com.daniel.quizbibz.models.QuizDataClass" />

        <variable
            name="position"
            type="int" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        app:strokeWidth="@dimen/dp_1"
        app:strokeColor="@color/secondary_color"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/qNumber"
            style="@style/primary16Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Question Number" />

        <TextView
            android:id="@+id/lvlQuestion"
            style="@style/primary16Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="start"
            android:text="@{quizData.question}"
            app:layout_constraintStart_toEndOf="@id/qNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/primary16Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/options" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOptionOne"
                style="@style/black16Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@{quizData.option_a}"
                tools:text="Option A" />

            <TextView
                android:id="@+id/tvOptionTwo"
                style="@style/black16Regular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="end"
                android:text="@{quizData.option_b}"
                tools:text="Option B" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOptionThree"
                style="@style/black16Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@{quizData.option_c}"
                tools:text="Option C" />

            <TextView
                android:id="@+id/tvOptionFour"
                style="@style/black16Regular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="end"
                android:text="@{quizData.option_d}"
                tools:text="Option D" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCOption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLevelType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btnUpdate"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/delete"
                android:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>


    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>